; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/audit/extr_audit_arg.c_audit_arg_ctlname.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/audit/extr_audit_arg.c_audit_arg_ctlname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kaudit_record = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@ARG_CTLNAME = common dso_local global i32 0, align 4
@ARG_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @audit_arg_ctlname(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.kaudit_record*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call %struct.kaudit_record* (...) @currecord()
  store %struct.kaudit_record* %6, %struct.kaudit_record** %5, align 8
  %7 = load %struct.kaudit_record*, %struct.kaudit_record** %5, align 8
  %8 = icmp eq %struct.kaudit_record* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %29

10:                                               ; preds = %2
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.kaudit_record*, %struct.kaudit_record** %5, align 8
  %13 = getelementptr inbounds %struct.kaudit_record, %struct.kaudit_record* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = mul i64 %16, 4
  %18 = trunc i64 %17 to i32
  %19 = call i32 @bcopy(i32* %11, i32* %14, i32 %18)
  %20 = load i32, i32* %4, align 4
  %21 = load %struct.kaudit_record*, %struct.kaudit_record** %5, align 8
  %22 = getelementptr inbounds %struct.kaudit_record, %struct.kaudit_record* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i32 %20, i32* %23, align 4
  %24 = load %struct.kaudit_record*, %struct.kaudit_record** %5, align 8
  %25 = load i32, i32* @ARG_CTLNAME, align 4
  %26 = load i32, i32* @ARG_LEN, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @ARG_SET_VALID(%struct.kaudit_record* %24, i32 %27)
  br label %29

29:                                               ; preds = %10, %9
  ret void
}

declare dso_local %struct.kaudit_record* @currecord(...) #1

declare dso_local i32 @bcopy(i32*, i32*, i32) #1

declare dso_local i32 @ARG_SET_VALID(%struct.kaudit_record*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
